2005-08-08  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c (opt_default, _find_path) : Initialize path_progname
	  for both pdsh and pdcp.

	* src/pdsh/mod.h, src/pdsh/mod.c, src/pdsh/main.c : 
	  Accept module path element as secure if owner matches pdsh/pdcp 
	  executable ownership, as well as root or current user. 

	* src/pdsh/mod.c (_path_permissions_ok) : Use stat() instead of lstat().

2005-08-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/main.c : Change seteuid() to plain setuid() which is
	  more portable and has the intended effect.

	* src/modules/sshcmd.c : Change setenv() to putenv() for portability.

	* src/modules/sshcmd.c : Remove sshcmdr() which is now identical
	  to sshcmdrw().
	
	* src/pdsh/dsh.c () : Don't automatically close fd on XPOLLERR, there
	  might still be pending data to read. Fixes output truncation bug
	  report by Fred Cassirer <fred.cassirer@hp.com>.

2005-08-02  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c, src/pdsh/pcp_server.c : Remove debug code for pdcp 
	  which was accidentally committed.

	* src/pdsh/pcp_server.c : Change all writes to go through stdout fd 
	  instead of stdin fd. Stdin will work when pdcp is invoked via rshd
	  started from inetd, and appears to work under Linux even for sshd, 
	  but writing to stdin will block on many systems, hanging the pcp
	  protocol. (Yehia Beyh <Yehia.Beyh@hp.com>)

	* : tag pdsh-2.6

2005-07-21  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c, src/common/hostlist.h : Update hostlist code
	  to latest version from LSD-Tools project, which fixes many bugs.

	* src/pdsh/mod.c (_dir_ok) : Directory permissions are ok even if 
	  other has write permission if the sticky bit is set.

	* src/pdsh/mod.c (_mod_load_dynamic_modules) : Don't load module
	  files owned by users other than current user and root, or files that
	  have write permissions for other.

	* : tag pdsh-2.5

2005-07-20  Mark Grondona <mgrondona@llnl.gov>
