@@ -1,3 +1,9 @@
+2005-08-09  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/modules/sshcmd.c : Add close-on-exec flag to file descriptors
+	  passed back from sshcmd() so they aren't inadvertently left open
+	  in subsequently invoked ssh commdands.
+
 2005-08-08  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/pdsh/opt.c (opt_default, _find_path) : Initialize path_progname
